# mcc_seminar_cpp

Ex01_manual_memory_management/: CMakeLists.txt  main.cpp
Ex02_automatic_memory_management/: main.cpp
seminar_day1_ROS2/Ex00_simple_build/: main.cpp  utils.cpp
seminar_day1_ROS2/Ex01_cmake_build/: CMakeLists.txt
seminar_day1_ROS2/Ex01_cmake_build/include/: utils.hpp
seminar_day2_ROS2/Ex00_memory_structure/: CMakeLists.txt  main.cpp
seminar_day2_ROS2/Ex01_manual_memory_management/: main.cpp
seminar_day2_ROS2/Ex02_automatic_memory_management/: CMakeLists.txt  main.cpp
seminar_day2_ROS2/Ex03_template/: CMakeLists.txt  main.cpp
seminar_day2_ROS2/ros2_tutorial/install/: local_setup.sh  setup.sh
seminar_day2_ROS2/ros2_tutorial/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
seminar_day2_ROS2/ros2_tutorial/install/cpp_pubsub/share/cpp_pubsub/: package.sh  package.xml
seminar_day2_ROS2/ros2_tutorial/log/: latest_build
seminar_day2_ROS2/ros2_tutorial/src/cpp_pubsub/: CMakeLists.txt
seminar_day2_ROS2/ros2_tutorial/src/cpp_pubsub/src/: publisher_member_function.cpp  subscriber_member_function.cpp
seminar_day3_ROS2/tf2_practice_ws/install/: local_setup.sh  setup.sh
seminar_day3_ROS2/tf2_practice_ws/install/tf2_broadcaster/lib/tf2_broadcaster/: tf2_broadcaster
seminar_day3_ROS2/tf2_practice_ws/install/tf2_broadcaster/share/ament_index/resource_index/parent_prefix_path/: tf2_broadcaster
seminar_day3_ROS2/tf2_practice_ws/install/tf2_broadcaster/share/tf2_broadcaster/: package.bash  package.sh  package.zsh
seminar_day3_ROS2/tf2_practice_ws/log/: latest_build
seminar_day3_ROS2/tf2_practice_ws/src/tf2_broadcaster/: CMakeLists.txt  package.xml
seminar_day3_ROS2/tf2_practice_ws/src/tf2_broadcaster/src/: tf2_broadcaster.cpp
seminar_day3_ROS2/urdf_practice_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
seminar_day3_ROS2/urdf_practice_ws/install/edu_arm_description/share/edu_arm_description/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
seminar_day3_ROS2/urdf_practice_ws/install/edu_arm_description/share/edu_arm_description/cmake/: edu_arm_descriptionConfig.cmake
seminar_day3_ROS2/urdf_practice_ws/install/edu_arm_description/share/edu_arm_description/launch/: view_robot.launch.py
seminar_day3_ROS2/urdf_practice_ws/install/open_manipulator_x_description/share/open_manipulator_x_description/: package.sh
seminar_day3_ROS2/urdf_practice_ws/install/open_manipulator_x_description/share/open_manipulator_x_description/urdf/: robot.urdf.xacro
seminar_day3_ROS2/urdf_practice_ws/log/: latest_build
seminar_day3_ROS2/urdf_practice_ws/src/edu_arm_description/: CMakeLists.txt
seminar_day3_ROS2/urdf_practice_ws/src/edu_arm_description/launch/: view_robot.launch.py
seminar_day3_ROS2/urdf_practice_ws/src/edu_arm_description/urdf/: robot.urdf.xacro
seminar_day3_ROS2/urdf_practice_ws/src/mybot_description/: CMakeLists.txt  package.xml
seminar_day3_ROS2/urdf_practice_ws/src/open_manipulator_x_description/: CMakeLists.txt
seminar_day3_ROS2/urdf_practice_ws/src/open_manipulator_x_description/launch/: view_robot.launch.py
